# SocketToMQTT

./: .gitignore  CMakeLists.txt  README.md  setup.sql  tcpServer.cpp
V1/: CMakeLists.txt  dbAccess.h
V2/: cscope.out  dbAccess.cpp  setup.sql  tcpServer.cpp  testDb.cpp
